Jogo da Memória - Stranger Things

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <audio id="musicTema" autoplay="autoplay">
         <source src="./assets/audio/tema.mp3" type="audio/mp3" />
         <source src="./assets/audio/running-up-that.mp3" type="audio/mp3" />
-        seu navegador não suporta HTML5
+        seu navegador não suporta som HTML5
     </audio>
     <div class="transition">
 
