Ajuste musica tema

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <audio id="musicTema" autoplay="autoplay">
-        <source src="./assets/audio/tema.mp3" type="audio/mp3" />
+    <audio id="musicTema" controls autoplay>
+        <source src="./assets/audio/tema.mp3" type="audio/mpeg" />
         seu navegador não suporta som HTML5
     </audio>
     <div class="transition">
