--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <audio id="musicTema" controls autoplay>
+    <audio id="musicTema" controls autoplay preload="auto" autoplay="autoplay">
         <source src="./assets/audio/tema.mp3" type="audio/mpeg" />
         seu navegador não suporta som HTML5
     </audio>
