--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-    <audio id="musicTema" controls autoplay preload="auto" autoplay="autoplay">
-        <source src="./assets/audio/tema.mp3" type="audio/mpeg" />
-        seu navegador não suporta som HTML5
+    <audio id="musicTema" controls autoplay preload="auto" autoplay="autoplay" src="./assets/audio/tema.mp3" type="audio/mpeg" >
+      
     </audio>
     <div class="transition">
 
