--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -11,15 +10,37 @@
 </head>
 
 <body>
-    <audio id="musicTema" controls autoplay preload="auto" autoplay="autoplay" src="./assets/audio/tema.mp3" type="audio/mpeg" >
-      
+    <audio loop id="musicTema" autoplay autoplay="true">
+        <source src="./assets/audio/tema.mp3" type="audio/mpeg">
+        Seu navegador não suporta a música tema.
     </audio>
     <div class="transition">
+    </div>
+    <input type="checkbox" id="toggle">
+    <label class="checkbox" for="toggle">
+        <span class="material-symbols-outlined">
+            sports_score
+        </span>
+        <!-- <div class="trace"></div>
+        <div class="trace"></div>
+        <div class="trace"></div>-->
+    </label>
+    <div class="score">
+        <h2>Melhor Pontuação</h2>
+        <div class="score-panel">
+            <h3>Jogador</h3>
+            <h3>Pontuação</h3>
+        </div>
+        <div id="score"></div>
+
 
     </div>
 
     <h1>Jogo da Memória - Stranger Things</h1>
     <div class="container">
+        <div class="cont" id="teste">
+            0
+        </div>
         <div class="button-volume">
             <button id="btn-pause">
                 <span class="material-symbols-outlined" id="volume-off" onclick="up()"
@@ -28,6 +49,16 @@
             </button>
         </div>
         <main class="game">
+            <div class="winner" id="winner">
+                <h1>Parabéns você venceu!</h1>
+                <div class="winner-input">
+                    <label for="nickname">Digite o seu nome: </label>
+                    <input type="text" name="nickname" id="nickname" placeholder="Ex. Felipe Cabral">
+
+                    <button id="save">Salvar</button>
+                </div>
+
+            </div>
 
             <div class="card" data-card="jim">
                 <img class="card-front" src="./assets/img/jim.jpg" alt="Carta - Frente">
@@ -104,6 +135,8 @@
 
         </main>
     </div>
+
+    <script src="/assets/js/js.cookie.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
