Add Favicon, Efeito sonoro virada de carta, ajuste CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/favico.ico">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <title>Jogo da Memória </title>
@@ -14,16 +15,13 @@
         <source src="./assets/audio/tema.mp3" type="audio/mpeg">
         Seu navegador não suporta a música tema.
     </audio>
-    <div class="transition">
-    </div>
+    <div class="transition"></div>
+
     <input type="checkbox" id="toggle">
     <label class="checkbox" for="toggle">
         <span class="material-symbols-outlined">
             sports_score
         </span>
-        <!-- <div class="trace"></div>
-        <div class="trace"></div>
-        <div class="trace"></div>-->
     </label>
     <div class="score">
         <h2>Melhor Pontuação</h2>
@@ -32,13 +30,10 @@
             <h3>Pontuação</h3>
         </div>
         <div id="score"></div>
-
-
     </div>
-
     <h1>Jogo da Memória - Stranger Things</h1>
     <div class="container">
-        <div class="cont" id="teste">
+        <div class="cont" id="contTo">
             0
         </div>
         <div class="button-volume">
@@ -48,92 +43,92 @@
                 <span class="material-symbols-outlined" id="volume-up" onclick="mute()">volume_up</span>
             </button>
         </div>
-        <main class="game">
-            <div class="winner" id="winner">
-                <h1>Parabéns você venceu!</h1>
-                <div class="winner-input">
-                    <label for="nickname">Digite o seu nome: </label>
-                    <input type="text" name="nickname" id="nickname" placeholder="Ex. Felipe Cabral">
+    </div>
+    <main class="game">
+        <div class="winner" id="winner">
+            <h1>Parabéns você venceu!<br>
+                Salve o seu desempenho...</h1>
+            <div class="winner-input">
+                <label for="nickname">Digite o seu nome: </label>
+                <input type="text" name="nickname" id="nickname" placeholder="Ex. Felipe Cabral">
+                <button id="save">Salvar</button>
+            </div>
+        </div>
 
-                    <button id="save">Salvar</button>
-                </div>
+        <div class="card" data-card="jim">
+            <img class="card-front" src="./assets/img/jim.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="jonathan">
+            <img class="card-front" src="./assets/img/jonathan.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="eleven">
+            <img class="card-front" src="./assets/img/eleven.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="dustin">
+            <img class="card-front" src="./assets/img/dustin.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="lucas">
+            <img class="card-front" src="./assets/img/lucas.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="eleven">
+            <img class="card-front" src="./assets/img/eleven.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="max">
+            <img class="card-front" src="./assets/img/max.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="jonathan">
+            <img class="card-front" src="./assets/img/jonathan.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="will">
+            <img class="card-front" src="./assets/img/will.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="steve">
+            <img class="card-front" src="./assets/img/steve.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="joyce">
+            <img class="card-front" src="./assets/img/joyce.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="dustin">
+            <img class="card-front" src="./assets/img/dustin.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="joyce">
+            <img class="card-front" src="./assets/img/joyce.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="will">
+            <img class="card-front" src="./assets/img/will.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="steve">
+            <img class="card-front" src="./assets/img/steve.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="max">
+            <img class="card-front" src="./assets/img/max.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="lucas">
+            <img class="card-front" src="./assets/img/lucas.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
+        <div class="card" data-card="jim">
+            <img class="card-front" src="./assets/img/jim.jpg" alt="Carta - Frente">
+            <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
+        </div>
 
-            </div>
-
-            <div class="card" data-card="jim">
-                <img class="card-front" src="./assets/img/jim.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="jonathan">
-                <img class="card-front" src="./assets/img/jonathan.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="eleven">
-                <img class="card-front" src="./assets/img/eleven.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="dustin">
-                <img class="card-front" src="./assets/img/dustin.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="lucas">
-                <img class="card-front" src="./assets/img/lucas.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="eleven">
-                <img class="card-front" src="./assets/img/eleven.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="max">
-                <img class="card-front" src="./assets/img/max.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="jonathan">
-                <img class="card-front" src="./assets/img/jonathan.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="will">
-                <img class="card-front" src="./assets/img/will.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="steve">
-                <img class="card-front" src="./assets/img/steve.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="joyce">
-                <img class="card-front" src="./assets/img/joyce.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="dustin">
-                <img class="card-front" src="./assets/img/dustin.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="joyce">
-                <img class="card-front" src="./assets/img/joyce.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="will">
-                <img class="card-front" src="./assets/img/will.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="steve">
-                <img class="card-front" src="./assets/img/steve.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="max">
-                <img class="card-front" src="./assets/img/max.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="lucas">
-                <img class="card-front" src="./assets/img/lucas.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-            <div class="card" data-card="jim">
-                <img class="card-front" src="./assets/img/jim.jpg" alt="Carta - Frente">
-                <img class="card-back" src="./assets/img/box.png" alt="Carta - Tema">
-            </div>
-
-        </main>
+    </main>
     </div>
 
     <script src="/assets/js/js.cookie.min.js"></script>
